fixing horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,7 @@
 /* SCSS HEX */
 /* SCSS HSL */
 /* SCSS RGB */
-
 * {
-  border: 1px solid #f00 !important;
-}* {
   margin: 0;
   padding: 0;
   font-family: 'Inconsolata', monospace;
